@@ -609,9 +609,13 @@ class DefaultControllerPlugin(ControllerPluginBase):
         code = result['status']
         template = '%s: ERROR (%s)'
         if code == xmlrpc.Faults.BAD_NAME:
-            return template % (name,'no such process')
+            return template % (name, 'no such process')
+        elif code == xmlrpc.Faults.NO_FILE:
+            return template % (name, 'no such file')
+        elif code == xmlrpc.Faults.NOT_EXECUTABLE:
+            return template % (name, 'file is not executable')
         elif code == xmlrpc.Faults.ALREADY_STARTED:
-            return template % (name,'already started')
+            return template % (name, 'already started')
         elif code == xmlrpc.Faults.SPAWN_ERROR:
             return template % (name, 'spawn error')
         elif code == xmlrpc.Faults.ABNORMAL_TERMINATION:
